--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .tabpay/
-app/__pycache__/
+app/__pycache__/*
 
 # Byte-compiled / optimized / DLL files
-app/__pycache__/__init__*
-app/__pycache__/routes*
-app/__pycache__/
+
+
 __pycache__/
 *.py[cod]
 *$py.class
