--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 aniso8601==9.0.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+bcrypt==4.2.0
 blinker==1.8.2
 cffi==1.17.1
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.2.0
 Flask==3.0.3
+Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-Mailman==1.1.1
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
 Flask-Security==5.5.2
@@ -20,10 +23,11 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 passlib==1.7.4
+psycopg2-binary==2.9.9
 pycparser==2.22
 pytz==2024.2
 six==1.16.0
-SQLAlchemy==2.0.35
+SQLAlchemy==2.0.34
 typing_extensions==4.12.2
 Werkzeug==3.0.4
 WTForms==3.1.2
