--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dnspython==2.6.1
 email_validator==2.2.0
 Flask==3.0.3
 Flask-Login==0.6.3
+Flask-Migrate==4.0.7
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
 Flask-Security==5.5.2
