--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 passlib==1.7.4
+pillow==10.4.0
 psycopg2-binary==2.9.9
 pycparser==2.22
 pytz==2024.2
