--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,14 @@ click==8.1.7
 dnspython==2.6.1
 email_validator==2.2.0
 Flask==3.0.3
+Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-Mailman==1.1.1
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
 Flask-Security==5.5.2
+Flask-Security-Too==5.5.2
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.1.0
@@ -32,7 +34,6 @@ pycparser==2.22
 pytz==2024.2
 requests==2.32.3
 schema==0.7.7
-setuptools==75.1.0
 six==1.16.0
 SQLAlchemy==2.0.34
 typing_extensions==4.12.2
