--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-Mailman==1.1.1
+Flask-Migrate==4.0.5
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
 Flask-Security==5.5.2
