--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 africastalking==1.2.9
+alembic==1.14.0
 aniso8601==9.0.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -19,7 +20,6 @@ Flask-Migrate==4.0.5
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
 Flask-Security==5.5.2
-Flask-Security-Too==5.5.2
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.1.0
@@ -27,14 +27,18 @@ idna==3.10
 importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.6
 MarkupSafe==2.1.5
 passlib==1.7.4
 pillow==10.4.0
+psutil==6.1.0
 psycopg2-binary==2.9.9
 pycparser==2.22
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 schema==0.7.7
+setuptools==75.1.0
 six==1.16.0
 SQLAlchemy==2.0.34
 typing_extensions==4.12.2
