--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 bcrypt==4.2.0
 blinker==1.8.2
+cachelib==0.13.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -20,6 +21,7 @@ Flask-Migrate==4.0.5
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
 Flask-Security==5.5.2
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.1.0
@@ -29,6 +31,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.6
 MarkupSafe==2.1.5
+msgspec==0.18.6
 passlib==1.7.4
 pillow==10.4.0
 psutil==6.1.0
