modified:   app/__init__.py         modified:   app/templates/host.html         modified:   config.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,15 +22,18 @@ Flask-Security-Too==5.5.2
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.1.0
+gunicorn==23.0.0
 idna==3.10
 importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+packaging==24.2
 passlib==1.7.4
 pillow==10.4.0
 psycopg2-binary==2.9.9
 pycparser==2.22
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 schema==0.7.7
