--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ venv.bak/
 # Flask configuration files
 instance/
 *.ini
-*.cfg
+# *.cfg  # Commenting out to allow babel.cfg
 config.py
 # Pytest cache
 .pytest_cache/
