--- a/requirements.txt
+++ b/requirements.txt
@@ -3,74 +3,51 @@ alembic==1.14.0
 aniso8601==9.0.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-asn1crypto==1.5.1
 babel==2.16.0
-bcrypt==4.0.1
-bleach==6.2.0
+bcrypt==4.2.0
 blinker==1.8.2
-cbor2==5.6.5
+cachelib==0.13.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
-cryptography==43.0.3
-Deprecated==1.2.15
 dnspython==2.6.1
 email_validator==2.2.0
 Flask==3.0.3
 Flask-Admin==1.6.1
 flask-babel==4.0.0
 Flask-Bcrypt==1.0.1
-Flask-Limiter==3.8.0
 Flask-Login==0.6.3
 Flask-Mailman==1.1.1
-Flask-Migrate==4.0.5
+Flask-Migrate==4.0.7
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
 Flask-Security==5.5.2
+Flask-Security-Too==5.5.2
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.1.0
 gunicorn==23.0.0
 idna==3.10
 importlib_resources==6.4.5
-iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-limits==3.13.0
 Mako==1.3.6
-markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-mdurl==0.1.2
 msgspec==0.18.6
-ordered-set==4.1.0
 packaging==24.2
 passlib==1.7.4
-phonenumberslite==8.13.50
 pillow==10.4.0
-pluggy==1.5.0
-psutil==6.1.0
 psycopg2-binary==2.9.9
 pycparser==2.22
-Pygments==2.18.0
-pyOpenSSL==24.2.1
-pyotp==2.9.0
-pytest==8.3.3
 python-dotenv==1.0.1
 pytz==2024.2
-qrcode==8.0
 requests==2.32.3
-rich==13.9.4
 schema==0.7.7
-setuptools==75.1.0
 six==1.16.0
 SQLAlchemy==2.0.34
-SQLAlchemy-Utils==0.41.2
 typing_extensions==4.12.2
 urllib3==2.2.3
-webauthn==2.3.0
-webencodings==0.5.1
 Werkzeug==3.0.4
-wrapt==1.17.0
 WTForms==3.1.2
-zxcvbn==4.4.28
