--- a/.env.example
+++ b/.env.example
@@ -23,17 +23,14 @@ MPESA_PASSKEY=your_passkey_here
 MPESA_STK_PUSH_SHORTCODE=your_stk_push_shortcode
 MPESA_STK_PUSH_PASSKEY=your_stk_push_passkey
 
-# M-Pesa Callback URLs (Production)
+# M-Pesa Callback URLs
 MPESA_CALLBACK_URL=https://your-domain.com/api/v1/payments/confirmation
-MPESA_VALIDATION_URL=https://your-domain.com/api/v1/payments/validation
-MPESA_CALLBACK_BASE_URL=https://your-domain.com
 
 # API Base URL
 API_BASE_URL=https://your-domain.com
 
 # Development Settings (uncomment for local development)
 # MPESA_CALLBACK_URL=http://localhost:5000/api/v1/payments/confirmation
-# MPESA_VALIDATION_URL=http://localhost:5000/api/v1/payments/validation
 # MPESA_CALLBACK_BASE_URL=http://localhost:5000
 # API_BASE_URL=http://localhost:5000
 # FLASK_ENV=development
