Fixed url register

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Students .env.example file for TabPay Project 
+
 # Database Configuration
 DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 
@@ -24,13 +26,15 @@ MPESA_STK_PUSH_SHORTCODE=your_stk_push_shortcode
 MPESA_STK_PUSH_PASSKEY=your_stk_push_passkey
 
 # M-Pesa Callback URLs
-MPESA_CALLBACK_URL=https://your-domain.com/api/v1/payments/confirmation
+MPESA_CALLBACK_BASE_URL=https://your-domain.com
+MPESA_VALIDATION_URL=/mpesa/c2b/validation
+MPESA_CONFIRMATION_URL=/mpesa/c2b/confirmation
 
 # API Base URL
 API_BASE_URL=https://your-domain.com
 
 # Development Settings (uncomment for local development)
-# MPESA_CALLBACK_URL=http://localhost:5000/api/v1/payments/confirmation
 # MPESA_CALLBACK_BASE_URL=http://localhost:5000
-# API_BASE_URL=http://localhost:5000
+# MPESA_VALIDATION_URL=/api/v1/mpesa/c2b/validation
+# MPESA_CONFIRMATION_URL=/api/v1/mpesa/c2b/confirmation
 # FLASK_ENV=development
